// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input snapshot renders 1`] = `
<div
  className="MuiFormControl-root-29 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-6"
  >
    <div
      className="RawInput-inputWrapper-4"
    >
      <div
        className="MuiInputBase-root-46 MuiInput-root-33 RawInput-inputRoot-3 MuiInput-underline-37 MuiInputBase-formControl-47 MuiInput-formControl-34"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-56 MuiInput-input-41"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="hi"
        />
      </div>
      <div
        className="RawInput-hiddenText-5"
      >
        hi
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-63 MuiFormHelperText-filled-69"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders alignment 1`] = `
<div
  className="MuiFormControl-root-29 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-6"
  >
    <div
      className="RawInput-inputWrapper-4"
    >
      <div
        className="MuiInputBase-root-144 MuiInput-root-131 RawInput-inputRoot-3 MuiInput-underline-135 MuiInputBase-formControl-145 MuiInput-formControl-132"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-154 MuiInput-input-139 RawInput-right-8 RawInput-size4-13"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="hi"
        />
      </div>
      <div
        className="RawInput-hiddenText-5"
      >
        hi
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-63 MuiFormHelperText-filled-69"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders correct feedback 1`] = `
<div
  className="MuiFormControl-root-29 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-6"
  >
    <div
      className="RawInput-inputWrapper-4"
    >
      <div
        className="MuiInputBase-root-84 MuiInput-root-71 RawInput-inputRoot-3 MuiInput-underline-75 MuiInputBase-formControl-85 MuiInput-formControl-72"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-94 MuiInput-input-79"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="hi"
        />
      </div>
      <div
        className="RawInput-hiddenText-5"
      >
        hi
      </div>
    </div>
    <div
      className="RawInput-icon-7"
    >
      <div>
        Correct
      </div>
    </div>
  </div>
  <div>
    Feedback
  </div>
  <p
    className="MuiFormHelperText-root-63 MuiFormHelperText-filled-69"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders disabled 1`] = `
<div
  className="MuiFormControl-root-29 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-6"
  >
    <div
      className="RawInput-inputWrapper-4"
    >
      <div
        className="MuiInputBase-root-114 MuiInput-root-101 RawInput-inputRoot-3 MuiInput-underline-105 MuiInputBase-disabled-117 MuiInput-disabled-104 MuiInputBase-formControl-115 MuiInput-formControl-102"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-124 MuiInput-input-109 MuiInputBase-disabled-117 MuiInput-disabled-104"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="hi"
        />
      </div>
      <div
        className="RawInput-hiddenText-5"
      >
        hi
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-63 MuiFormHelperText-disabled-65 MuiFormHelperText-filled-69"
  >
    
  </p>
</div>
`;
